apps/wordpress/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wp-app-deployment
  labels:
    app: wp-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wp-app
  template:
    metadata:
      labels:
        app: wp-app
    spec:
      containers:
      - name: wp-app
        image: brndnmtthws/nginx-echo-headers
        ports:
        - containerPort: 8080
