apps/wordpress/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wp-app-service
spec:
  selector:
    app: wp-app
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
