apps/wordpress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wp-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: wp-app.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wp-app-service
                port:
                  number: 80
